--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="google-site-verification" content="m2maKr0XFTYf365KZ_nhDAqERos82FfKvFX0ldDc6yQ" />
     
     <title>Tuyizere Tresor | Electrical & Maintenance Engineer</title>
     <meta name="description" content="Professional portfolio of Tuyizere Tresor - Electrical & Maintenance Engineer specializing in hotel infrastructure, residential and commercial electrical systems in Kigali, Rwanda" />
